Fixed the popup on StackOverflow to fit with the new update

--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@
     border-radius: 5px;
     width: 136px;
     height: 120px;
-    margin-left: 10px;
+    margin-top: 75px;
+    margin-right: 5px;
+    margin-left: 5px;
     background-color: rgb(255, 255, 255);
     padding: 10px;
     transition: 1s;
@@ -46,7 +48,7 @@
     display: inline-block;
 }
 .s-box:hover{
-    width: 320px;
+    width: 330px;
 }
 .s-searchbox{
     margin-top: 13px;
